# aitelier

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  aitelier.secrets.toml.example  aitelier.toml.example  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: test.yml
config/: agents.toml  sandbox.toml
core/: pyproject.toml
core/src/aitelier/: __init__.py  cli.py  config.py  errors.py  fanout.py  idempotency.py  inference_exec.py  middleware.py  observability.py  openai_compat.py  otel.py  pricing.py  probes.py  purge_worker.py  runner.py  runs.py  runtime.py  sandbox_proxy.py  schedules.py  security.py  serializers.py  server.py  traces.py  webhook_worker.py  workspace.py
core/src/aitelier/endpoints/: __init__.py  inference.py  runs.py  schedules.py  traces.py
core/src/aitelier/providers/: __init__.py  acp_transport.py  agent.py  llm.py  ollama.py  sandbox_agent.py
core/src/aitelier/static/: ui.html
core/src/aitelier/storage/: __init__.py  _store.py  inmemory.py  models.py  postgres.py
core/src/aitelier/storage/migrations/: 001_initial.sql  002_idempotency.sql  003_parent_run_id.sql  004_persist_request_body.sql  005_run_scores.sql  006_nullable_token_defaults.sql  007_runs_kind_check.sql  008_cache_token_columns.sql
core/tasks/: __init__.py  audit.py  implement.py  lint.py  research.py  summarize.py
core/tests/: conftest.py  smoke_test.py  test_acp_transport.py  test_agent.py  test_agent_error_status.py  test_cli_status.py  test_cli_traces.py  test_config.py  test_config_loader.py  test_deploy_samples.py  test_doctor.py  test_errors.py  test_fanout.py  test_idempotency.py  test_idempotency_concurrency.py  test_llm.py  test_openai_compat.py  test_otel.py  test_pricing.py  test_probes.py  test_purge_worker.py  test_runner.py  test_sandbox_agent.py  test_sandbox_proxy.py  test_schedules.py  test_schema_ts_sync.py  test_security.py  test_server.py  test_server_helpers.py  test_storage.py  test_store_contract.py  test_traces.py  test_webhook_worker.py  test_workspace.py
core/tests/live/: README.md  conftest.py  test_agent.py  test_agent_config.py  test_agent_contract.py  test_async_runs.py  test_cancellation.py  test_complete_and_embed.py  test_concurrency.py  test_cross_cutting.py  test_endpoint_shape.py  test_health_and_discovery.py  test_idempotency.py  test_runs_and_schedules.py  test_schedule_firing.py  test_webhooks.py
docker/: .env.example  Dockerfile  docker-compose.yml  sandbox-agent.Dockerfile  sandbox-agent.brig.Dockerfile
docker/litellm/: config.yaml
docs/: DESIGN.md  FEEDBACK-from-deepread.md  INTEGRATION.md  PLAN.md
docs/deploy/: aitelier.cell.yaml  backup-restore.md  brig-feedback.md  com.aitelier.agent.plist  com.aitelier.backup.plist  launchd.md  sandbox-agent.cell.yaml
examples/: 01_fanout_merge.py  02_mcp_orchestrator.py  03_scheduled_audit.py  04_webhook_receiver.py  README.md
schemas/v1/: active_runs.schema.json  aitelier_request.schema.json  cancel.schema.json  complete_stream_event.schema.json  discovery.schema.json  events.schema.json  health.schema.json  result.schema.json  run.schema.json  run_event.schema.json  run_score.schema.json  schedule.schema.json  task.schema.json  trace_record.schema.json  traces_aggregate.schema.json
scripts/: backup.sh  cell-entrypoint.sh  check-model-prices.py  doctor.sh  generate-types.sh  install-launchd.sh  lib.sh  otel-backfill.py  release.sh  restore.sh  start.sh  status.sh  stop.sh  supervise.sh  test-brig-mode.sh  test-contract.sh  test-docker-mode.sh  uninstall-launchd.sh
sdks/python/: README.md  pyproject.toml
sdks/python-mcp/: README.md  pyproject.toml
sdks/python-mcp/src/aitelier_mcp/: __init__.py  server.py
sdks/python-mcp/tests/: test_server.py
sdks/python/src/aitelier_client/: __init__.py  client.py  streaming.py  webhooks.py
sdks/python/src/aitelier_client/_generated/: __init__.py  models.py
sdks/python/tests/: test_client.py  test_models.py  test_webhooks.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: client.ts  index.ts  streaming.ts  types.ts  webhooks.ts
sdks/typescript/src/_generated/: types.ts
sdks/typescript/tests/: client.test.ts  methods.test.ts  webhooks.test.ts
tests/contract/: execute_agent.json  execute_llm.json  fanout.json  health.json
tools/: compare.py
