[project]
name = "aitelier-workspace"
version = "0.1.0"
description = "aitelier monorepo workspace"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["core", "sdks/python"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/tests", "sdks/python/tests", "tests"]
markers = [
    "live: integration tests that require a running aitelier service (auto-skipped without AITELIER_LIVE_URL)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    # Build-time only (scripts/generate-types.sh). 0.57 changed directory
    # input to require modular/package output and breaks our
    # `--input schemas/v1 --output _generated/models.py` single-file flow
    # ("Modular references require an output directory"); 0.60 didn't fix it.
    # Pin below 0.57 until the directory→single-file path is restored upstream.
    "datamodel-code-generator>=0.25,<0.57",
]
