[project]
name = "aitelier"
version = "0.1.0"
description = "AI task toolkit — fan-out dispatch across LLM and coding agent providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
codex = [
    "openai-codex-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
aitelier = "aitelier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitelier"]
