[project]
name = "aitelier"
version = "0.1.0"
description = "AI task toolkit — fan-out dispatch across LLM and coding agent providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=2.0.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
codex = [
    "openai-codex-sdk>=0.1.0",
]
# Install with `uv pip install aitelier[otel]` (or include in your
# deployment image) when you want OpenTelemetry GenAI export. Aitelier
# lazy-imports these only when `[otel] enabled = true` in aitelier.toml,
# so this stays out of the default install footprint.
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    # Pulled in for tests of the OTel attribute mapping helpers; the
    # gen_ai instrumentation has no behavior to validate without the SDK.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.scripts]
aitelier = "aitelier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitelier"]

[tool.hatch.build.targets.wheel.force-include]
"src/aitelier/storage/migrations" = "aitelier/storage/migrations"
"src/aitelier/static" = "aitelier/static"
