[project]
name = "aitelier-mcp"
version = "0.1.0"
description = "MCP server exposing the aitelier control plane (runs, traces, schedules) as tools — for agents that need to dispatch subagents through aitelier"
requires-python = ">=3.11"
dependencies = [
    "aitelier-client",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aitelier-mcp = "aitelier_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitelier_mcp"]
